# TasksTemplate

./: .env.example  .gitignore  README.md  changes.patch  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: 5-new-task.yml
.github/workflows/: ci.yaml  verify-tasks.yaml
config/: deployments.yaml  event.yaml  labels.yaml  labels_schema.json  participant-tags.yaml  registration.yaml
docs/: DEPLOYMENT.md  STRUCTURE.md
docs/structure/: assets.md  config.md  docker-compose.md  pictures.md  src.md
tasks/: schema.json
tasks/simple-task-example/: config.yaml  description.md  docker-compose.yaml
tasks/simple-task-example/tests/: e2e.py
toolbox/: main.py
toolbox/commands/: deploy.py  encrypt_flag.py  hash_flag.py  services.py  summary.py  tests.py  verify.py
toolbox/tests/: test_verify.py
toolbox/utils/: cli.py  config.py  deployment.py  docker.py  hash.py  podman.py  tasks.py  tests.py
toolbox/utils/deployment/: deployment.py
