[project]
name = "hack4krak-toolbox"
version = "0.0.1"
description = "CLI for managing tasks for Hack4Krak CTF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cowsay>=6.1",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/Hack4Krak/TasksTemplate"

[project.scripts]
toolbox = "toolbox.main:app"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["toolbox/tests/"]
